<resources>
    <string name="app_name">RollCall</string>

    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="verify_button">Verify</string>
    <string name="send_verification_button">Send verification email again</string>
    <string name="sign_out_button">Sign Out</string>

    <string name="name_input">Name</string>
    <string name="sId_input">Student ID</string>
    <string name="surname_input">Surname</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>

    <string name="login_text">Login</string>
    <string name="register_teacher_text">Teacher Registration</string>
    <string name="register_student_text">Student Registration</string>
    <string name="info_verify">Please check your email to verify your account and press the <b>VERIFY</b> button.</string>

    <string name="sign_out">Sign Out</string>

    <string name="verify_label">Verify</string>

    <string-array name="degree_array">
        <item>Prof Dr</item>
        <item>Doç Dr</item>
        <item>Dr Öğr Üyesi</item>
    </string-array>

    <string-array name="number_of_lesson_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>
</resources>
