<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyActivity">

    <TextView
        android:id="@+id/info_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/info_verify"
        android:textColor="@android:color/primary_text_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/verify_button_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/verify_button"
        app:layout_constraintEnd_toEndOf="@+id/info_verify"
        app:layout_constraintStart_toStartOf="@+id/info_verify"
        app:layout_constraintTop_toBottomOf="@+id/info_verify" />

    <Button
        android:id="@+id/send_verification_button_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/send_verification_button"
        app:layout_constraintEnd_toEndOf="@+id/verify_button_verify"
        app:layout_constraintStart_toStartOf="@+id/verify_button_verify"
        app:layout_constraintTop_toBottomOf="@+id/verify_button_verify" />

    <Button
        android:id="@+id/signout_button_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sign_out_button"
        app:layout_constraintEnd_toEndOf="@+id/send_verification_button_verify"
        app:layout_constraintStart_toStartOf="@+id/send_verification_button_verify"
        app:layout_constraintTop_toBottomOf="@+id/send_verification_button_verify" />

    <ProgressBar
        android:id="@+id/progress_bar_verify"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>